# Dev-avec-docker

Jour2/: ANALYSE_COMPLETE.md
Jour2/java-api/: Dockerfile.java-distroless  pom.xml
Jour2/node-api/: package-lock.json
Jour2/python-api/: Dockerfile.python-distroless  pyproject.toml
Jour2/python-api/app/: main.py
Jour2/scripts/: build-all.sh  build-secure.sh
TD-Jour6/: .env.example  CHOIX_TECHNIQUES.md  COMMANDES.md  demo.sh  docker-compose.yml
TD-Jour6/argocd/apps/: app-of-apps.yaml  backend.yaml  database.yaml  dev.yaml  frontend.yaml  infrastructure.yaml  prod.yaml  staging.yaml
TD-Jour6/k8s/deployments/: api-gateway.yaml  auth-service.yaml  frontend.yaml  orders-api.yaml  products-api.yaml
TD-Jour6/k8s/ingress/: ingress.yaml
TD-Jour6/k8s/namespaces/: cloudshop-dev.yaml  cloudshop-prod.yaml  cloudshop-staging.yaml
TD-Jour6/k8s/services/: services.yaml
TD-Jour6/k8s/statefulsets/: postgres.yaml
TD-Jour6/src/api-gateway/: .dockerignore  Dockerfile  package-lock.json  package.json  server.js
TD-Jour6/src/auth-service/: Dockerfile  app.js  package-lock.json  package.json
TD-Jour6/src/frontend/: .dockerignore  Dockerfile  package-lock.json
TD-Jour6/src/frontend/src/: App.jsx  (+1 more)
TD-Jour6/src/orders-api/: .dockerignore  Dockerfile  go.mod  main.go
TD-Jour6/src/products-api/: .dockerignore  Dockerfile  main.py  requirements.txt
TP-Jour4/: .gitignore
TP-Jour4/docs/: ARCHITECTURE.md  FINOPS.md  INSTALLATION.md  README-TECHNIQUE.md
TP-Jour4/k8s/argocd/: application-monitoring.yaml  application-solar.yaml
TP-Jour4/scripts/: demo.sh  setup.sh
(+27 files in other folders)
